<resources>
    <string name="app_name">TT15 Demo</string>
    <string name="no_connection_one">Oops! Could not fetch content!</string>
    <string name="hello_world">Hello world!</string>
    <string name="open">Open</string>
    <string name="action_image_save">Save Image</string>
    <string name="action_image_share">Share</string>
    <string name="close">Close</string>
    <string name="text_retry">Retry</string>
    <string name="try_again">Seems like a network issue\nPlease try again in sometime!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">869269316452160</string>
    <!--1441209929531592--><!--869269316452160-->
    <string name="skip_login">Skip Login</string>
    <string name="logout">Log Out</string>
    <string name="instafeed">InstaFeed</string>
    <string name="developers">Developers</string>
    <string name="contact">Contact Us</string>
    <string name="gbutton">Sign in with Google</string>
    <string name="pass">Password</string>
    <string name="result">Result</string>
    <string name="login">Login</string>
    <string name="option">Please select preferred method of login\nOR</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="email">Email Address</string>
    <string name="RegN">Registration Number</string>
    <string name="phno">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="city">Your City</string>
    <string name="college">Your College</string>
    <string name="year">Year of Study</string>
    <string name="reg">Create an Account</string>
    <string name="regbutton">Register</string>
    <string name="drawer_opened">Open</string>
    <string name="emailButton">Log in via Email</string>
    <string name="drawer_closed">Close</string>
    <string-array name="cityArray">
        <item>Ahmedabad</item>
        <item>Bangalore</item>
        <item>Bhopal</item>
        <item>Bhubaneshwar</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
        <item>Cochin</item>
        <item>Coimbatore</item>
        <item>Delhi</item>
        <item>Hyderabad</item>
        <item>Indore</item>
        <item>Jaipur</item>
        <item>Kolkata</item>
        <item>Lucknow</item>
        <item>Mangalore</item>
        <item>Manipal</item>
        <item>Mumbai</item>
        <item>Nagpur</item>
        <item>Noida</item>
        <item>Patna</item>
        <item>Pune</item>
        <item>Thiruvananthapuram</item>
        <item>Udupi</item>
        <item>Other</item>
    </string-array>
    <string-array name="GenderArray">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string-array name="CollegeArray">
        <item>Manipal Institute of Technology</item>
        <item>Kasturba Medical College</item>
        <item>Manipal Institute of Communication</item>
        <item>Manipal College of Dental Sciences</item>
        <item>ICAS, Manipal</item>
        <item>TAPMI, Manipal</item>
        <item>VIT, Vellore</item>
        <item>SRM Chennai</item>
        <item>Other</item>
    </string-array>
    <string-array name="YearArray">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
        <item>5th Year</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_event">EventActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_event_search">EventSearchActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_image"></string>
    <string name="title_activity_insta_feed">#techtatva15</string>
    <string name="title_activity_all_events">AllEvents</string>
</resources>