<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/abc_search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_insta"
        android:icon="@drawable/ic_insta"
        android:title="@string/instafeed"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_allcats"
        android:title="All Events"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_results"
        android:orderInCategory="100"
        android:title="@string/result"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_developers"
        android:orderInCategory="100"
        android:title="@string/developers"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />
</menu>