<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/white"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.appex.tryproject.activites.RegisterActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/register_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:textSize="18.5sp"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/register_name_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/register_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="18.5sp"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phno_text_input_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/register_email_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_phno_edit_text"
            android:textSize="18.5sp"
            android:hint="@string/phno"
            android:inputType="phone"
            android:layout_below="@+id/RegEmail"
        />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_dob_button"
        android:textAllCaps="false"
        android:layout_below="@+id/register_phno_text_input_layout"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="@string/dob"
        android:textSize="18.5sp"
        android:onClick="setDate"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_gender_spinner"
        android:layout_below="@+id/register_dob_button"
        android:layout_marginBottom="20dp"
        android:textSize="18.5sp"
        android:entries="@array/GenderArray"
        style="@style/spinner_style"
        >
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_city_text_view"
        android:text="@string/city"
        android:layout_below="@+id/register_gender_spinner"
        android:textSize="18.5sp"
        android:layout_marginBottom="20dp"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_city_spinner"
        android:layout_below="@+id/register_city_text_view"
        android:textSize="18.5sp"
        android:entries="@array/cityArray"
        android:layout_marginBottom="20dp"
        style="@style/spinner_style"
        >
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_college_text_view"
        android:text="@string/college"
        android:layout_below="@+id/register_city_spinner"
        android:textSize="18.5sp"
        android:layout_marginBottom="20dp"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_college_spinner"
        android:layout_below="@+id/register_college_text_view"
        android:textSize="18.5sp"
        android:entries="@array/CollegeArray"
        style="@style/spinner_style"
        android:layout_marginBottom="20dp"
        >
    </Spinner>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_reg_no_text_input_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/register_college_spinner"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <EditText
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/register_reg_no_edit_text"
            android:hint="@string/RegN"
            android:textSize="18.5sp"
            android:layout_marginBottom="20dp" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearTextView"
        android:text="@string/year"
        android:layout_below="@+id/register_reg_no_text_input_layout"
        android:textSize="18.5sp"
        android:layout_marginBottom="20dp"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_year_spinner"
        android:layout_below="@+id/yearTextView"
        android:textSize="18.5sp"
        android:entries="@array/YearArray"
        style="@style/spinner_style"
        android:layout_marginBottom="20dp"
        >
    </Spinner>
    <Button
        android:id="@+id/register_button"
        android:layout_below="@+id/register_year_spinner"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/regbutton"
        android:background="@android:color/transparent"
        android:textColor="@color/primary" />
</RelativeLayout>
</ScrollView>