<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appex.tryproject.EmailActivity"
    android:background="@color/sorte">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmail"
            android:inputType="textEmailAddress"
            style="@style/edittext_style"
            android:hint="@string/email"
            android:textSize="18.5sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPass"
            android:textSize="18.5sp"
            android:layout_below="@+id/loginEmail"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            style="@style/edittext_style"
            android:hint="@string/pass"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
        <Button
            android:id="@+id/loginB"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="18.5sp"
            android:layout_below="@+id/loginPass"
            android:text="@string/login"
            android:textAllCaps="false"
            style="@style/buttong"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>



</RelativeLayout>
