<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/container"
    android:background="@color/sorte">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:id="@+id/linearLayout">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            style="@style/edittext_style"
            android:drawableLeft="@drawable/ic_email"
            android:text="@string/emailButton"
            android:id="@+id/emailLogin"
            android:textAllCaps="false"
            android:textSize="18.5sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/edittext_style"
        android:layout_height="wrap_content"
        android:text="@string/option"
        android:textColor="#000000"
        android:textSize="18.5sp"
        android:gravity="center"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:id="@+id/optionView" />

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/optionView"
        android:text="@string/reg"
        style="@style/buttong"
        android:textSize="18.5sp"
        android:layout_gravity="center_horizontal" />
</RelativeLayout>